roles/add-ons/templates/ingress-nginx/ingress-test/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example
  namespace: default
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: example-nginx
          servicePort: http
